# talk-creative-rust

./: README.md
artgen/: Cargo.toml  README.md
artgen/square_structures/: Cargo.toml  README.md
artgen/square_structures/src/: main.rs
artgen/square_structures/src/steps/: step1.rs  step2.rs  step3.rs  step4.rs  step5.rs  step6.rs
artgen/src/: main.rs
slides/: index.html
slides/assets/: main.css  remark.min.js
slides/assets/fonts/: Compagnon-Roman.eot
